Fix header on IOS

--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -9,7 +9,7 @@ header {
   text-align: center;
   background-image: url("../assets/background.png");
   background-size: cover;
-  background-attachment: fixed;
+  // background-attachment: fixed;
   background-position: center;
   color: var(--color-white);
   font-size: 1.5em;
